[package]
name = "pors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axocli = "0.1.0"
clap = { version = "4.2.2", features = ["derive"] }
lightning = "0.0.114"
lightning-invoice = "0.22.0"
miette = { version = "5.7.0", features = ["fancy"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
