[package]
name = "pors"
version = "0.0.17"
edition = "2021"
repository = "https://github.com/dunxen/pors"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axocli = "0.1.0"
clap = { version = "4.2.2", features = ["derive"] }
lightning = "0.0.114"
lightning-invoice = "0.22.0"
miette = { version = "5.7.0", features = ["fancy"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.14.0-prerelease.6"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
github-attestations = true
# Skip checking whether the specified configuration files are up to date
allow-dirty = ["ci"]

[workspace.metadata.release]
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
